fix gap

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 
 body{
     font-family: 'Open Sans', sans-serif;
-    overflow-x: hidden;
+    /*overflow: hidden;*/
 }
 
 header .nav.primary{
@@ -37,7 +37,7 @@ header .nav.primary div.primary ul li{
 
 header .nav.primary div.secundary ul li{
     color: #0089B6;
-    padding: 0 10px 0 0;
+    /*padding: 0 10px 0 0;*/
     gap: 5px;
 }
 
@@ -133,7 +133,7 @@ input[type=text] {
     padding: 15px;
     font-size: 13px;
     border: none;
-    width: 30vw;
+    width: 29vw;
     border: 1px solid #F1F3F9;
     border-radius: 10px 0px 0px 10px;
     box-shadow: 0px 8px 14px 1px rgba(0, 91, 155, 0.06);
